test/valid/57163_multiple_print_statements/multiple_print_statements.mag
-- Author: 57163, Guilherme Dias

const megaPrint : Unit = print(true, false, true, unit, false)

fun main (_) : Unit -> Unit = 
	megaPrint
