test/invalid-syntax/57163_func_needs_more_types/function_has_not_sufficient_types.mag
-- Author: 57163, Guilherme Dias

fun dolores(n,m,p,q,o) : (Int, Int) -> Int
	n + m
